# Reconciliation_Platform_Main

./: package-lock.json  structure.txt  test-recon-run.json  test_reconciliation.py
reconciliation-platform/: .gitignore  .vercelignore  DEPLOYMENT_SUMMARY.md  README.md  START_PROJECT.md  VERCEL_DEPLOYMENT.md  check_databases.py  check_db_details.py  main.py  playwright.config.ts  pyproject.toml  requirements.txt  reset_and_reseed.py  test_end_to_end.py  test_upload.py  vercel.json
reconciliation-platform/.github/workflows/: ci.yml
reconciliation-platform/api/: index.py
reconciliation-platform/backend/: config.py
reconciliation-platform/backend/api/: main.py  middleware.py
reconciliation-platform/backend/audit/: audit_service.py
reconciliation-platform/backend/db/: base.py  seed.py
reconciliation-platform/backend/engine/: matcher.py  reconciliation_engine.py  tolerance.py
reconciliation-platform/backend/ingestion/: normalizers.py  parsers.py  pipeline.py  validators.py
reconciliation-platform/backend/jobs/: celery_app.py  ingest_jobs.py  local_tasks.py  reconciliation_jobs.py  report_jobs.py
reconciliation-platform/backend/prompts/: explanation.j2  (+1 more)
reconciliation-platform/data_generator/: __init__.py  anomaly_injectors.py  distributions.py  generator.py  manifest.py
reconciliation-platform/e2e/: app.spec.ts
reconciliation-platform/frontend/: .env.example  .env.local.example  index.html  package.json  tailwind.config.js  vite.config.ts
reconciliation-platform/scripts/: celery_worker.ps1
reconciliation-platform/test_data/: manifest.json
(+100 files in other folders)
