[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconciliation-platform"
version = "1.0.0"
description = "Payments Reconciliation Gap Detection Platform"
requires-python = "==3.11.*"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "data_generator*"]
